set splash activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Memorizer</string>
+    <string name="copyright">Copyright 2021. WJSOFT Corp. All Rights Reserved.</string>
 </resources>
