--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Memorizer</string>
     <string name="copyright">Copyright 2021. WJSOFT Corp. All Rights Reserved.</string>
     <string name="login">Login</string>
+    <string name="home">Home</string>
+    <string name="cardbook">Cardbook</string>
+    <string name="my_account">My Account</string>
 </resources>
