--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="home">Home</string>
     <string name="cardbook">Cardbook</string>
     <string name="my_account">My Account</string>
+    <string name="training">Training</string>
 </resources>
