add toolbar menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cardbook">Cardbook</string>
     <string name="my_account">My Account</string>
     <string name="training">Training</string>
+    <string name="search">Search</string>
 </resources>
