--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
 
     <!--    Alert   -->
     <string name="back_press_alert">Please click BACK again to exit</string>
+    <string name="settings">Settings</string>
+    <string name="support">Support</string>
+    <string name="about">About</string>
 </resources>
