--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="settings">Settings</string>
     <string name="support">Support</string>
     <string name="about">About</string>
-    <string name="add_cardbook">AddCardbook</string>
+    <string name="add_cardbook">Add Cardbook</string>
+    <string name="reorder">Reorder</string>
 </resources>
